Add HelloBot for testing Abilities;

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>telegrambots</artifactId>
             <version>4.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots-abilities</artifactId>
+            <version>4.9</version>
+        </dependency>
     </dependencies>
 
     <properties>
