--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,16 @@
             <artifactId>telegrambots-abilities</artifactId>
             <version>4.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.0-alpha1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>2.0.0-alpha1</version>
+        </dependency>
     </dependencies>
 
     <properties>
