--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>RaifQuizBot</artifactId>
+    <groupId>com.grimeoverhere</groupId>
+    <artifactId>digital-uploader</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -97,7 +97,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        ru.raif.quizbot.Server
+                                        com.grimeoverhere.uploaderbot.Server
                                     </mainClass>
                                 </manifest>
                             </archive>
